# everjoy111

./: pyproject.toml
lcs/: 1.json  2.json  3.json  res.xlsx  scrapy.cfg
lcs/lcs/: items.py  middlewares.py  pipelines.py  settings.py
lcs/lcs/spiders/: lcs1.py  res.xlsx  res2.xlsx  res3.xlsx
